fix spacing

--- a/css/dragons.webflow.css
+++ b/css/dragons.webflow.css
@@ -392,6 +392,8 @@ p {
 .team-member {
 	width: 35%;
 	margin: 3%;
+	margin-bottom: 0 !important;
+	margin-top: 0 !important;
 	text-align: center;
 }
 
